@@ -1,170 +1,143 @@
-#--
-# Copyright 2006 by Chad Fowler, Rich Kilmer, Jim Weirich and others.
-# All rights reserved.
-# See LICENSE.txt for permissions.
-#++
+require "rubygems/version"
 
-##
-# Requirement version includes a prefaced comparator in addition
-# to a version number.
-#
-# A Requirement object can actually contain multiple, er,
-# requirements, as in (> 1.2, < 2.0).
-
-class Gem::Requirement
-
-  include Comparable
-
-  attr_reader :requirements
-
-  OPS = {
-    "="  =>  lambda { |v, r| v == r },
-    "!=" =>  lambda { |v, r| v != r },
-    ">"  =>  lambda { |v, r| v > r },
-    "<"  =>  lambda { |v, r| v < r },
-    ">=" =>  lambda { |v, r| v >= r },
-    "<=" =>  lambda { |v, r| v <= r },
-    "~>" =>  lambda { |v, r| v = v.release; v >= r && v < r.bump }
-  }
-
-  OP_RE = OPS.keys.map{ |k| Regexp.quote k }.join '|'
+module Gem
 
   ##
-  # Factory method to create a Gem::Requirement object.  Input may be a
-  # Version, a String, or nil.  Intended to simplify client code.
-  #
-  # If the input is "weird", the default version requirement is returned.
+  # A Requirement is a set of one or more version restrictions. It
+  # supports a few (<tt>=, !=, >, <, >=, <=, ~></tt>) different
+  # restriction operators.
 
-  def self.create(input)
-    case input
-    when Gem::Requirement then
-      input
-    when Gem::Version, Array then
-      new input
-    else
-      if input.respond_to? :to_str then
-        self.new [input.to_str]
+  class Requirement
+    include Comparable
+
+    OPS = { #:nodoc:
+      "="  =>  lambda { |v, r| v == r },
+      "!=" =>  lambda { |v, r| v != r },
+      ">"  =>  lambda { |v, r| v > r  },
+      "<"  =>  lambda { |v, r| v < r  },
+      ">=" =>  lambda { |v, r| v >= r },
+      "<=" =>  lambda { |v, r| v <= r },
+      "~>" =>  lambda { |v, r| v = v.release; v >= r && v < r.bump }
+    }
+
+    quoted  = OPS.keys.map { |k| Regexp.quote k }.join "|"
+    PATTERN = /\A\s*(#{quoted})?\s*(#{Gem::Version::VERSION_PATTERN})\s*\z/
+
+    ##
+    # Factory method to create a Gem::Requirement object.  Input may be
+    # a Version, a String, or nil.  Intended to simplify client code.
+    #
+    # If the input is "weird", the default version requirement is
+    # returned.
+
+    def self.create input
+      case input
+      when Gem::Requirement then
+        input
+      when Gem::Version, Array then
+        new input
       else
-        self.default
+        if input.respond_to? :to_str then
+          new [input.to_str]
+        else
+          default
+        end
       end
     end
-  end
 
-  ##
-  # A default "version requirement" can surely _only_ be '>= 0'.
-  #--
-  # This comment once said:
-  #
-  # "A default "version requirement" can surely _only_ be '> 0'."
+    ##
+    # A default "version requirement" can surely _only_ be '>= 0'.
+    #--
+    # This comment once said:
+    #
+    # "A default "version requirement" can surely _only_ be '> 0'."
 
-  def self.default
-    self.new ['>= 0']
-  end
+    def self.default
+      new '>= 0'
+    end
 
-  ##
-  # Constructs a Requirement from +requirements+ which can be a String, a
-  # Gem::Version, or an Array of those.  See #parse for details on the
-  # formatting of requirement strings.
+    ##
+    # Parse +obj+, returning an <tt>[op, version]</tt> pair. +obj+ can
+    # be a String or a Gem::Version.
+    #
+    # If +obj+ is a String, it can be either a full requirement
+    # specification, like <tt>">= 1.2"</tt>, or a simple version number,
+    # like <tt>"1.2"</tt>.
+    #
+    #     parse("> 1.0")                 # => [">", "1.0"]
+    #     parse("1.0")                   # => ["=", "1.0"]
+    #     parse(Gem::Version.new("1.0")) # => ["=,  "1.0"]
 
-  def initialize(requirements)
-    @requirements = case requirements
-                    when Array then
-                      requirements.map do |requirement|
-                        parse(requirement)
-                      end
-                    else
-                      [parse(requirements)]
-                    end
-    @version = nil   # Avoid warnings.
-  end
+    def self.parse obj
+      return ["=", obj] if Gem::Version === obj
 
-  ##
-  # Marshal raw requirements, rather than the full object
+      unless PATTERN =~ obj.to_s
+        raise ArgumentError, "Illformed requirement [#{obj.inspect}]"
+      end
 
-  def marshal_dump # :nodoc:
-    [@requirements]
-  end
+      [$1 || "=", Gem::Version.new($2)]
+    end
 
-  ##
-  # Load custom marshal format
+    ##
+    # An array of requirement pairs. The first element of the pair is
+    # the op, and the second is the Gem::Version.
 
-  def marshal_load(array) # :nodoc:
-    @requirements = array[0]
-    @version = nil
-  end
+    attr_reader :requirements #:nodoc:
 
-  def to_s # :nodoc:
-    as_list.join(", ")
-  end
+    ##
+    # Constructs a requirement from +requirements+. Requirements can be
+    # Strings, Gem::Versions, or Arrays of those. +nil+ and duplicate
+    # requirements are ignored. An empty set of +requirements+ is the
+    # same as <tt>">= 0"</tt>.
 
-  def pretty_print(q) # :nodoc:
-    q.group 1, 'Gem::Requirement.new(', ')' do
-      q.pp as_list
+    def initialize *requirements
+      requirements = requirements.flatten
+      requirements.compact!
+      requirements.uniq!
+
+      requirements << ">= 0" if requirements.empty?
+      @requirements = requirements.map! { |r| self.class.parse r }
+    end
+
+    def as_list # :nodoc:
+      requirements.map { |op, version| "#{op} #{version}" }
+    end
+
+    def hash # :nodoc:
+      requirements.hash
+    end
+
+    def marshal_dump # :nodoc:
+      [@requirements]
+    end
+
+    def marshal_load array # :nodoc:
+      @requirements = array[0]
+    end
+
+    def prerelease?
+      requirements.any? { |r| r.last.prerelease? }
+    end
+
+    def pretty_print q # :nodoc:
+      q.group 1, 'Gem::Requirement.new(', ')' do
+        q.pp as_list
+      end
+    end
+
+    ##
+    # True if +version+ satisfies this Requirement.
+
+    def satisfied_by? version
+      requirements.all? { |op, rv| OPS[op].call version, rv }
+    end
+
+    def to_s # :nodoc:
+      as_list.join ", "
+    end
+
+    def <=> other # :nodoc:
+      to_s <=> other.to_s
     end
   end
-
-  def as_list
-    normalize
-    @requirements.map do |op, version| "#{op} #{version}" end
-  end
-
-  def normalize
-    return if not defined? @version or @version.nil?
-    @requirements = [parse(@version)]
-    @nums = nil
-    @version = nil
-    @op = nil
-  end
-
-  ##
-  # True if this requirement satisfied by the Gem::Version +version+.
-
-  def satisfied_by?(version)
-    normalize
-    @requirements.all? { |op, rv| satisfy?(op, version, rv) }
-  end
-
-  ##
-  # Is "+version+ +op+ +required_version+" satisfied?
-
-  def satisfy?(op, version, required_version)
-    OPS[op].call(version, required_version)
-  end
-
-  def prerelease?
-    # TODO: why is @requirements a nested array?
-    @requirements.any?{ |r| r[1].prerelease? }
-  end
-
-  ##
-  # Parse the version requirement obj returning the operator and version.
-  #
-  # The requirement can be a String or a Gem::Version.  A String can be an
-  # operator (<, <=, =, >=, >, !=, ~>), a version number, or both, operator
-  # first.
-
-  def parse(obj)
-    case obj
-    when /^\s*(#{OP_RE})\s*(#{Gem::Version::VERSION_PATTERN})\s*$/o then
-      [$1, Gem::Version.new($2)]
-    when /^\s*(#{Gem::Version::VERSION_PATTERN})\s*$/o then
-      ['=', Gem::Version.new($1)]
-    when /^\s*(#{OP_RE})\s*$/o then
-      [$1, Gem::Version.new('0')]
-    when Gem::Version then
-      ['=', obj]
-    else
-      raise ArgumentError, "Illformed requirement [#{obj.inspect}]"
-    end
-  end
-
-  def <=>(other) # :nodoc:
-    to_s <=> other.to_s
-  end
-
-  def hash # :nodoc:
-    to_s.hash
-  end
-
 end
-
